--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
     <section> <!--Inicia Hero-->
 
-      
     </section> <!--Fin Hero-->
 
     <!-- Inicia Footer -->
@@ -70,7 +69,7 @@
             <div class="col-md-12 col-md-6 col-lg-3">   
                 <p class="fw-bold fs-5">Nosotros</h3>
                 <ul class="list-unstyled">
-                    <li class="fs-5"><a href="#" class="text-white text-decoration-none">Equipo</a></li>
+                    <li class="fs-5"><a href="equipo.html" class="text-white text-decoration-none">Equipo</a></li>
                     <li class="fs-5"><a href="#" class="text-white text-decoration-none">Contacto</a></li>
                     <li class="fs-5"><a href="#" class="text-white text-decoration-none">Políticas de Privacidad</a></li>
                     <li class="fs-5"><a href="#" class="text-white text-decoration-none">Términos y Condiciones</a></li>
@@ -96,8 +95,6 @@
             </div>
         </div>
     </footer> <!-- Footer -->
-   
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
