Se agregó una página base para poder agregar distintos elementos, esta nos va servir como plantilla.

--- a/BASE.html
+++ b/BASE.html
@@ -45,8 +45,11 @@
 
     <section> <!--Inicia Hero-->
 
+        <!-- ?Aquí se pondrán distintos tipos de elementos, información etc. Puede ser 1 o varíos elementos section, div, etc. -->
+
     </section> <!--Fin Hero-->
 
+    
     <!-- Inicia Footer -->
     <footer class="container-fluid text-center"> <!-- container-fluid es para que se ajuste al 100% de la pantalla 
     !Nota: Checar como se ve el final del text center
